--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "react": "^16.6.3",
     "react-bootstrap-slider": "^2.1.5",
     "react-dom": "^16.6.3",
+    "react-popup": "^0.9.3",
     "react-radio-buttons": "^1.2.2",
     "react-radio-group": "^3.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactjs-popup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
