--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_app2",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://localhost:5000/",
   "dependencies": {
     "jquery": "^3.3.1",
     "react": "^16.6.3",
