--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "homepage": "http://localhost:5000/",
   "dependencies": {
+    "d3-drag": "^1.2.3",
+    "d3-force": "^2.0.0",
+    "d3-zoom": "^1.7.3",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-alert": "^5.1.0",
     "react-bootstrap-slider": "^2.1.5",
     "react-charts": "^2.0.0-alpha.12",
+    "react-d3-graph": "^2.0.0-rc2",
     "react-dom": "^16.6.3",
     "react-popup": "^0.9.3",
     "react-radio-buttons": "^1.2.2",
