--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-charts": "^2.0.0-alpha.12",
     "react-d3-graph": "^2.0.0-rc2",
     "react-dom": "^16.6.3",
+    "react-force-graph": "^1.20.3",
     "react-popup": "^0.9.3",
     "react-radio-buttons": "^1.2.2",
     "react-radio-group": "^3.0.3",
