--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-radio-group": "^3.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-simple-tooltip": "^2.3.3",
     "reactjs-popup": "^1.3.2"
   },
   "scripts": {
