--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3-drag": "^1.2.3",
     "d3-force": "^2.0.0",
     "d3-zoom": "^1.7.3",
+    "gojs": "^2.0.4",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-alert": "^5.1.0",
