--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-simple-tooltip": "^2.3.3",
+    "react-step-progress-bar": "^1.0.3",
     "react-sweet-progress": "^1.1.2",
     "reactjs-popup": "^1.3.2"
   },
