Upgrade lodash & lodash.template

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "d3-zoom": "^1.7.3",
     "gojs": "^2.0.4",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "react": "^16.6.3",
     "react-alert": "^5.1.0",
     "react-bootstrap-slider": "^2.1.5",
